fixed navbar aligning issue and added hover effect

--- a/movie-lookout/components/layout/MainNavigation.module.scss
+++ b/movie-lookout/components/layout/MainNavigation.module.scss
@@ -90,14 +90,15 @@
     position: relative;
 
     &_user {
-      width: 12rem;
+      flex-direction: row;
+      justify-content: center;
     }
   }
 
   &__icon {
     height: 3rem;
     width: 3rem;
-    margin-right: 7px;
+    margin-right: .7rem;
   }
 
   &__button {
@@ -129,24 +130,29 @@
   }
 
   &__dropdown {
-    width: 12rem;
-    height: 10rem;
     position: absolute;
-    top: 7rem;
-    right: 38.25rem;
-
+    display: flex;
+    flex-direction: column;
+    margin-top: 14rem;
+    width: 11.7rem;
     background-color: #62B6B7;
+    align-items: stretch;
+    border-bottom-left-radius: 3rem;
+    border-bottom-right-radius: 3rem;
+    overflow: hidden;
 
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    justify-content: center;
-    align-items: center;
-    grid-gap: .5rem;
-  }
+    &__a {
+      display: flex;
+      align-items: center;
+      padding: 1rem;
+      flex-direction: column;
+      text-decoration: none;
+      color: #000000;
 
-  &__anchor {
-    text-decoration: none;
-    color: #000000;
+      &:hover {
+        background-color: #CBEDD5
+      }
+    }
   }
 }
 
